Ensure uses latest shipyard

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -19,6 +19,7 @@ jobs:
           'consul-service-mesh/tcp-routing/',
           'modules/consul/',
           'modules/vault/',
+          'modules/smi-controller/',
           'modules/monitoring/',
         ]
 
